unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Sub_Estado__c.field-meta.xml
<CustomField>
    <fullName>Sub_Estado__c</fullName>
    <label>Sub Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BANSEFI</fullName>
            </value>
            <value>
                <fullName>COMPLETADO_POR_INGRESAR_INFONAVIT</fullName>
                <label>COMPLETADO POR INGRESAR INFONAVIT</label>
            </value>
            <value>
                <fullName>DESPERFILADO</fullName>
            </value>
            <value>
                <fullName>EMISION</fullName>
                <label>EMISIÓN</label>
            </value>
            <value>
                <fullName>ESCRITURADO</fullName>
            </value>
            <value>
                <fullName>INSTITUCION_FINANCIERA</fullName>
                <label>INSTITUCIÓN FINANCIERA</label>
            </value>
            <value>
                <fullName>NOTARIA</fullName>
                <label>NOTARÍA</label>
            </value>
            <value>
                <fullName>OFICINA</fullName>
            </value>
            <value>
                <fullName>PUNTOS_A_FUTURO</fullName>
                <label>PUNTOS A FUTURO</label>
            </value>
            <value>
                <fullName>SUBSIDIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>