unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Sub_Estatus_Proceso__c.field-meta.xml
<CustomField>
    <fullName>Sub_Estatus_Proceso__c</fullName>
    <label>Sub Estatus del Proceso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EN_PROGRESO</fullName>
                <label>EN PROGRESO</label>
            </value>
            <value>
                <fullName>POR_APROBAR</fullName>
                <label>POR APROBAR</label>
            </value>
            <value>
                <fullName>APROBADO</fullName>
            </value>
            <value>
                <fullName>RECHAZADO</fullName>
            </value>
            <value>
                <fullName>CANCELADO</fullName>
            </value>
            <value>
                <fullName>EN_FIRMAS</fullName>
                <label>EN FIRMAS</label>
            </value>
            <value>
                <fullName>POR_ENTREGAR</fullName>
                <label>POR ENTREGAR</label>
            </value>
            <value>
                <fullName>ENTREGADO</fullName>
            </value>
            <value>
                <fullName>CANCELADO POR REUBICACION</fullName>
            </value>
            <value>
                <fullName>RECHANULL</fullName>
                <isActive>false</isActive>
                <label>RECHANULL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>