unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Subsidio_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Subsidio_Financiamiento__c</fullName>
    <formula>IF( (Pagare_Subsidio_Cantidad__c  &gt;= 1)  &amp;&amp; (Pagar_Postventa_Cantidad__c &gt;= 1), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidio + Financiamiento</label>
    <type>Checkbox</type>
</CustomField>