unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Suma_de_Importe_Aplicado__c.field-meta.xml
<CustomField>
    <fullName>Suma_de_Importe_Aplicado__c</fullName>
    <description>Monto total de todos los recibos efectuados por el cliente o correspondientes a la financiera</description>
    <label>Suma de Importe Aplicado</label>
    <summarizedField>Documento__c.Importe_Aplicado_rollup__c</summarizedField>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>