unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Suma_de_Pagares_Sin_PostVenta__c.field-meta.xml
<CustomField>
    <fullName>Suma_de_Pagares_Sin_PostVenta__c</fullName>
    <label>Suma de Pagarés (Sin PostVenta)</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ ENGANCHE, PAGARÉ FINANCIERA, PAGARÉ FONDO DE GARANTÍA, PAGARÉ SEGURO FINANCIERA, PAGARÉ SUBSIDIO</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>