unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Suma_NC_Notaria_y_Avaluo_TXT__c.field-meta.xml
<CustomField>
    <fullName>Suma_NC_Notaria_y_Avaluo_TXT__c</fullName>
    <formula>TEXT(ROUND(Sumatoria_NC_Notaria_y_Avaluo__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suma NC Notaria y Avaluo TXT</label>
    <type>Text</type>
</CustomField>