unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Suma_Pagares__c.field-meta.xml
<CustomField>
    <fullName>Suma_Pagares__c</fullName>
    <label>Suma de Pagarés VE</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Pagaré Enganche, Pagaré Financiera, Pagaré Fondo de Garantía, Pagaré Postventa, Pagaré Reestructura Post Venta, Pagaré Seguro Financiera, Pagaré Subsidio</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>