unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Suma_Pagares_Notaria_y_Avaluo_TXT__c.field-meta.xml
<CustomField>
    <fullName>Suma_Pagares_Notaria_y_Avaluo_TXT__c</fullName>
    <formula>TEXT(ROUND(Sumatoria_Pagares_Notaria_y_Avaluo__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suma Pagares Notaria y Avaluo TXT</label>
    <type>Text</type>
</CustomField>