unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Suma_Saldo_Pagares_Financiera__c.field-meta.xml
<CustomField>
    <fullName>Suma_Saldo_Pagares_Financiera__c</fullName>
    <label>Suma Saldo Pagarés Financiera</label>
    <summarizedField>Documento__c.Saldo__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ FINANCIERA</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>