unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Suma_Total_de_Pagar_s_TXT__c.field-meta.xml
<CustomField>
    <fullName>Suma_Total_de_Pagar_s_TXT__c</fullName>
    <formula>TEXT(ROUND(Suma_Total_de_Pagares__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suma Total de Pagarés TXT</label>
    <type>Text</type>
</CustomField>