unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Suma_Total_de_Pagares__c.field-meta.xml
<CustomField>
    <fullName>Suma_Total_de_Pagares__c</fullName>
    <label>Suma Total de Pagarés</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ ENGANCHE, PAGARÉ FINANCIERA, PAGARÉ FONDO DE GARANTÍA, PAGARÉ POSTVENTA, PAGARÉ POSTVENTA REESTRUCTURA FINANCIERA, PAGARÉ SEGURO FINANCIERA, PAGARÉ SUBSIDIO</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Documento__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Factura</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>