unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Suma_Total_de_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Suma_Total_de_Pagos__c</fullName>
    <label>Pagos Realizados</label>
    <summarizedField>Pago__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Pago__c.Estatus_del_Pago__c</field>
        <operation>notEqual</operation>
        <value>Cancelado, Devolución</value>
    </summaryFilterItems>
    <summaryForeignKey>Pago__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>