unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Suma_Total_de_Pagos_Aplicados__c.field-meta.xml
<CustomField>
    <fullName>Suma_Total_de_Pagos_Aplicados__c</fullName>
    <label>Suma Total de Pagos Aplicados</label>
    <summarizedField>Documento__c.Importe_Aplicado_rollup__c</summarizedField>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>