unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Suma_Total_Pagar_s_Post_Venta__c.field-meta.xml
<CustomField>
    <fullName>Suma_Total_Pagar_s_Post_Venta__c</fullName>
    <label>Suma Total Pagarés Post Venta</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ POSTVENTA</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>