unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Sumatoria_Importe_Aplicado__c.field-meta.xml
<CustomField>
    <fullName>Sumatoria_Importe_Aplicado__c</fullName>
    <label>Sumatoria Importe Aplicado</label>
    <summarizedField>Documento__c.Importe_Aplicado__c</summarizedField>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>