unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Sumatoria_Notas_Credito_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Sumatoria_Notas_Credito_Bonificacion__c</fullName>
    <label>Sumatoria Notas de Crédito Bonificación</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Nota de Crédito</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>NC BONIFICACIÓN</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>