unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Sumatoria_Pagares_Enganche__c.field-meta.xml
<CustomField>
    <fullName>Sumatoria_Pagares_Enganche__c</fullName>
    <label>Sumatoria Pagarés Enganche</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ ENGANCHE</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>