unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Sumatoria_Pagares_Notaria_y_Avaluo__c.field-meta.xml
<CustomField>
    <fullName>Sumatoria_Pagares_Notaria_y_Avaluo__c</fullName>
    <label>Sumatoria Pagarés Notaría y Avalúo</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ GASTO AVALÚO, PAGARÉ GASTO CRÉDITO DIRECTO, PAGARÉ GASTOS NOTARIALES</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>