unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Sumatoria_Pagares_Postventa__c.field-meta.xml
<CustomField>
    <fullName>Sumatoria_Pagares_Postventa__c</fullName>
    <label>Sumatoria Pagarés VO</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Pagaré</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ POSTVENTA, PAGARÉ FINANCIERA, PAGARÉ FONDO DE GARANTÍA, PAGARÉ ENGANCHE, PAGARÉ SEGURO FINANCIERA, PAGARÉ SUBSIDIO, PAGARÉ REESTRUCTURA POST VENTA</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>