unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Sumatoria_Total_Pagares_Fondos_de_Garant__c.field-meta.xml
<CustomField>
    <fullName>Sumatoria_Total_Pagares_Fondos_de_Garant__c</fullName>
    <label>Sumatoria Total Pagarés Fondos de Garant</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ FONDO DE GARANTÍA</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>