unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Tipo_Credito__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Credito__c</fullName>
    <formula>TEXT(Proceso_Venta__r.Tipo_de_Credito__c)</formula>
    <label>Tipo de Crédito</label>
    <type>Text</type>
</CustomField>