unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Tipo_de_Pagare__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pagare__c</fullName>
    <label>Tipo de Pagaré</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAGARÉ AHORRO VOLUNTARIO</fullName>
            </value>
            <value>
                <fullName>PAGARÉ CANCELACIÓN DE NC GN</fullName>
            </value>
            <value>
                <fullName>PAGARÉ DEVOLUCIÓN NO APLICA</fullName>
            </value>
            <value>
                <fullName>PAGARÉ ENGANCHE</fullName>
            </value>
            <value>
                <fullName>PAGARÉ FINANCIERA</fullName>
            </value>
            <value>
                <fullName>PAGARÉ FONDO DE GARANTÍA</fullName>
            </value>
            <value>
                <fullName>PAGARÉ GASTO AVALÚO</fullName>
            </value>
            <value>
                <fullName>PAGARÉ GASTO CRÉDITO DIRECTO</fullName>
            </value>
            <value>
                <fullName>PAGARÉ GASTOS NOTARIALES</fullName>
            </value>
            <value>
                <fullName>PAGARÉ GASTOS OPERATIVOS</fullName>
            </value>
            <value>
                <fullName>PAGARÉ POSTVENTA</fullName>
            </value>
            <value>
                <fullName>PAGARÉ POSTVENTA REESTRUCTURA FINANCIERA</fullName>
            </value>
            <value>
                <fullName>PAGARÉ PREVENTA</fullName>
            </value>
            <value>
                <fullName>PAGARÉ REEMBOLSO CANCELACIÓN</fullName>
            </value>
            <value>
                <fullName>PAGARÉ REEMBOLSO ESCRITURA</fullName>
            </value>
            <value>
                <fullName>PAGARÉ REESTRUCTURA POST VENTA</fullName>
            </value>
            <value>
                <fullName>PAGARÉ REVERSA BONIFICACIÓN</fullName>
            </value>
            <value>
                <fullName>PAGARÉ SEGURO FINANCIERA</fullName>
            </value>
            <value>
                <fullName>PAGARÉ SUBSIDIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>