unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Tipo_de_Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Plan_de_Venta__c</fullName>
    <formula>TEXT(Plan_Venta__r.Tipo_de_Plan_de_Venta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Plan de Venta</label>
    <type>Text</type>
</CustomField>