unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Titulacion__c.field-meta.xml
<CustomField>
    <fullName>Titulacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titulación</label>
    <referenceTo>Titulacion__c</referenceTo>
    <relationshipLabel>Cobranza Comercial</relationshipLabel>
    <relationshipName>Cobranz_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>