unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Total_Facturas_Valor_Operaci_n__c.field-meta.xml
<CustomField>
    <fullName>Total_Facturas_Valor_Operaci_n__c</fullName>
    <label>Total Facturas Valor Operación</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.Valor_de_la_Operaci_n__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>