unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Total_Pagado_por_NC__c.field-meta.xml
<CustomField>
    <fullName>Total_Pagado_por_NC__c</fullName>
    <label>Total Pagado por NC</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>NC AHORRO VOLUNTARIO, NC BONIFICACIÓN, NC CANCELACIÓN ESCRITURA, NC CANCELACIÓN PG N, NC DEVOLUCIÓN NO APLICA, NC GASTO AVALÚO, NC GASTO CRÉDITO DIRECTO, NC GASTOS NOTARIALES, NC GASTOS OPERATIVOS, NC RECUPERACIÓN CARTERA, NC REEMBOLSO AHORRO VOLUNTARIO,</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>