unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Total_Pagado_por_Recibos__c.field-meta.xml
<CustomField>
    <fullName>Total_Pagado_por_Recibos__c</fullName>
    <label>Total Pagado por Recibos</label>
    <summarizedField>Pago__c.Importe__c</summarizedField>
    <summaryForeignKey>Pago__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>