unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Total_Pagare_Fondo_de_Garantia__c.field-meta.xml
<CustomField>
    <fullName>Total_Pagare_Fondo_de_Garantia__c</fullName>
    <label>Total Pagaré Fondo de Garantía</label>
    <summarizedField>Documento__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Documento__c.Tipo__c</field>
        <operation>equals</operation>
        <value>PAGARÉ FONDO DE GARANTÍA</value>
    </summaryFilterItems>
    <summaryForeignKey>Documento__c.Cobranza_Comercial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>