unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Total_Precio_Superficie_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Total_Precio_Superficie_Excedente__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Terreno_Excedente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Precio Superficie Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>