unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Ubicacion_Compania__c.field-meta.xml
<CustomField>
    <fullName>Ubicacion_Compania__c</fullName>
    <label>Ubicación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>