unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Unidad_Privativa__c.field-meta.xml
<CustomField>
    <fullName>Unidad_Privativa__c</fullName>
    <formula>Proceso_Venta__r.Plan_de_Venta__r.Vivienda__r.Unidad_Privativa__c</formula>
    <label>Unidad Privativa</label>
    <type>Text</type>
</CustomField>