unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Valor_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Valor_Operacion__c</fullName>
    <formula>Proceso_Venta__r.Valor_Operacion_Formula_PlanVenta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Escritura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>