unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Valor_Operacion_Original__c.field-meta.xml
<CustomField>
    <fullName>Valor_Operacion_Original__c</fullName>
    <label>Valor Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>