unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Valor_Operacion_TXT__c.field-meta.xml
<CustomField>
    <fullName>Valor_Operacion_TXT__c</fullName>
    <formula>TEXT(ROUND(Valor_Operacion__c,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Operación TXT</label>
    <type>Text</type>
</CustomField>