unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Venta_Especial__c.field-meta.xml
<CustomField>
    <fullName>Venta_Especial__c</fullName>
    <formula>TEXT(Proceso_Venta__r.Plan_de_Venta__r.Venta_Especial__c)</formula>
    <label>Venta Especial</label>
    <type>Text</type>
</CustomField>