unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Vivienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vivienda</label>
    <referenceTo>Vivienda__c</referenceTo>
    <relationshipLabel>Cobranza Comercial</relationshipLabel>
    <relationshipName>Cobranza_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>