unpackaged/main/default/objects/Cobranza_Comercial__c/fields/Vivienda_Cobrada_FormulaCheck__c.field-meta.xml
<CustomField>
    <fullName>Vivienda_Cobrada_FormulaCheck__c</fullName>
    <formula>If( Suma_Saldo_Pagares_Financiera__c &lt;= 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vivienda Cobrada</label>
    <type>Checkbox</type>
</CustomField>