unpackaged/main/default/objects/Cobranza_Comercial__c/validationRules/Fecha_Vewncimiento_Menor_o_Igual_a_30Dia.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_Vewncimiento_Menor_o_Igual_a_30Dia</fullName>
    <active>true</active>
    <description>La fecha de Vencimiento debe ser mayor a 30 dias de la fecha de Hoy</description>
    <errorConditionFormula>!$User.is_Data_Migration_User__c &amp;&amp;
CASESAFEID($User.Id) != &#39;005o0000000k2XuAA&#39; &amp;&amp;
CASESAFEID($User.Id) != &#39;0050r000003K1yeAAC&#39; &amp;&amp; 
IF( TEXT(Sub_Estatus_Proceso__c) = &quot;CANCELADO&quot;, false,
    IF( Fecha_Inicio_de_Financiamiento__c  &gt;  TODAY()+30, TRUE, FALSE)
			)</errorConditionFormula>
    <errorDisplayField>Fecha_Inicio_de_Financiamiento__c</errorDisplayField>
    <errorMessage>La fecha de vencimiento debe ser Máximo 30 dias posteriores a la fecha actual</errorMessage>
</ValidationRule>