unpackaged/main/default/objects/Cobranza_Comercial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proceso_Venta__c</columns>
    <columns>Cliente__c</columns>
    <columns>Fecha_Reserva__c</columns>
    <columns>Estatus_Proceso__c</columns>
    <columns>Sub_Estatus_Proceso__c</columns>
    <columns>Fraccionamiento__c</columns>
    <columns>Prototipo__c</columns>
    <columns>Numero_Interno__c</columns>
    <columns>Manzana__c</columns>
    <columns>Lote__c</columns>
    <columns>Valor_Operacion__c</columns>
    <columns>Fecha_Escritura__c</columns>
    <columns>Tipo_Credito__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>